[gd_scene load_steps=3 format=2]

[ext_resource path="res://YouWin.gd" type="Script" id=1]
[ext_resource path="res://simple_tileset.tres" type="TileSet" id=2]

[node name="YouWin" type="Node2D"]
script = ExtResource( 1 )

[node name="TileMap" type="TileMap" parent="."]
tile_set = ExtResource( 2 )
format = 1
tile_data = PoolIntArray( 0, 0, 0, 1, 0, 0, 2, 0, 0, 3, 0, 0, 4, 0, 0, 5, 0, 0, 6, 0, 0, 7, 0, 0, 8, 0, 0, 9, 0, 0, 10, 0, 0, 11, 0, 0, 12, 0, 0, 13, 0, 0, 14, 0, 0, 15, 0, 0, 65536, 0, 0, 65551, 0, 0, 131072, 0, 0, 131074, 0, 0, 131076, 0, 0, 131078, 0, 0, 131079, 0, 0, 131080, 0, 0, 131082, 0, 0, 131084, 0, 0, 131087, 0, 0, 196608, 0, 0, 196611, 0, 0, 196614, 0, 0, 196616, 0, 0, 196618, 0, 0, 196620, 0, 0, 196623, 0, 0, 262144, 0, 0, 262147, 0, 0, 262150, 0, 0, 262151, 0, 0, 262152, 0, 0, 262154, 0, 0, 262155, 0, 0, 262156, 0, 0, 262159, 0, 0, 327680, 0, 0, 327695, 0, 0, 393216, 0, 0, 393219, 0, 0, 393223, 0, 0, 393225, 0, 0, 393227, 0, 0, 393228, 0, 0, 393231, 0, 0, 458752, 0, 0, 458755, 0, 0, 458757, 0, 0, 458759, 0, 0, 458761, 0, 0, 458763, 0, 0, 458765, 0, 0, 458767, 0, 0, 524288, 0, 0, 524291, 0, 0, 524292, 0, 0, 524294, 0, 0, 524295, 0, 0, 524297, 0, 0, 524299, 0, 0, 524301, 0, 0, 524303, 0, 0, 589824, 0, 0, 589839, 0, 0, 655360, 0, 0, 655361, 0, 0, 655362, 0, 0, 655363, 0, 0, 655364, 0, 0, 655365, 0, 0, 655366, 0, 0, 655367, 0, 0, 655368, 0, 0, 655369, 0, 0, 655370, 0, 0, 655371, 0, 0, 655372, 0, 0, 655373, 0, 0, 655374, 0, 0, 655375, 0, 0 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]

[node name="Tween" type="Tween" parent="."]

[node name="BlackMask" type="ColorRect" parent="."]
visible = false
margin_right = 1024.0
margin_bottom = 704.0
color = Color( 0, 0, 0, 1 )

[node name="GameRestartTimer" type="Timer" parent="."]
wait_time = 4.58
[connection signal="timeout" from="GameRestartTimer" to="." method="_on_GameRestartTimer_timeout"]
